# Langchain-with-Agents-Job-Recommender

./: .env  README.md  app.py  main.py  pyproject.toml  rag.py  requirements.txt  tools.py
data/: jobs.txt
